Devloped whole frontend

--- a/BE/.env.example
+++ b/BE/.env.example
@@ -1,6 +1,5 @@
-# Copy this file to .env and provide production-safe values
 PORT=3000
 FRONTEND_ORIGIN=http://localhost:5173
-MONGO_URI=your_mongo_uri_here
-JWT_SECRET=replace_with_strong_secret
+MONGO_URI=mongodb+srv://nodejscourse:nodejs123@cluster0.s1halyh.mongodb.net/devTinder
+JWT_SECRET=DEV@Tinder$786
 NODE_ENV=development
