--- a/BE/.gitignore
+++ b/BE/.gitignore
@@ -1,3 +1,23 @@
+# Node.js
+node_modules/
+npm-debug.log*
 .env
-node_modules
-.env.local
+.env.* # Environment variables
+
+# Logs
+logs/
+*.log
+
+# Build artifacts
+dist/
+build/
+coverage/
+
+# Editor/IDE specific files
+.vscode/
+.idea/
+*.swp
+.DS_Store # macOS specific
+
+# Temporary files
+tmp/
